--- a/.github/workflows/htmlproofer.yml
+++ b/.github/workflows/htmlproofer.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Check the html files
     steps:
+      - uses: actions/checkout@v2
       - name: Check HTML
         uses: chabad360/htmlproofer@master
         with:
