--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Check for broken links
     steps:
+      - uses: actions/checkout@v2
       - name: Check for broken links
         id: link-report
         uses: celinekurpershoek/link-checker@v1.0.2
